k8s/kustomize/arr/base/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
  type: ClusterIP
